tests/lean/partialStx.lean.expected.out
partialStx.lean:8:0: error: unexpected end of input; expected numeral
